force-app/main/default/objects/IndividualApplication/fields/Aboriginal_Applicants__c.field-meta.xml
<CustomField>
    <fullName>Aboriginal_Applicants__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If any of the applicants is an aboriginal person</description>
    <label>Aboriginal or Torres Strait Islander</label>
    <type>Checkbox</type>
</CustomField>