force-app/main/default/objects/IndividualApplication/fields/Aboriginal_Reg_Vic_Purchase_Location__c.field-meta.xml
<CustomField>
    <fullName>Aboriginal_Reg_Vic_Purchase_Location__c</fullName>
    <description>Location in regional Victoria where an aboriginal applicant intends to purchase</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Location in regional Victoria where an aboriginal applicant intends to purchase</inlineHelpText>
    <label>Aboriginal Reg Vic Purchase Location</label>
    <length>80</length>
    <type>Text</type>
</CustomField>