force-app/main/default/objects/IndividualApplication/fields/All_Citizens_Or_PR__c.field-meta.xml
<CustomField>
    <fullName>All_Citizens_Or_PR__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If all applicants are AUS citizens or PR holders</description>
    <label>Australian Citizens or PR</label>
    <type>Checkbox</type>
</CustomField>