force-app/main/default/objects/IndividualApplication/fields/Applicant_Age__c.field-meta.xml
<CustomField>
    <fullName>Applicant_Age__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If all applicants are 18 years or older at the time of settlement</description>
    <inlineHelpText>If all applicants are 18 years or older at the time of settlement</inlineHelpText>
    <label>Applicants 18 years or older</label>
    <type>Checkbox</type>
</CustomField>