force-app/main/default/objects/IndividualApplication/fields/ApplicantEmails__c.field-meta.xml
<CustomField>
    <fullName>ApplicantEmails__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ApplicantEmails</label>
    <type>TextArea</type>
</CustomField>