force-app/main/default/objects/IndividualApplication/fields/ApplicantNames__c.field-meta.xml
<CustomField>
    <fullName>ApplicantNames__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Applicant Names</label>
    <type>TextArea</type>
</CustomField>