force-app/main/default/objects/IndividualApplication/fields/Application_Case_Autonumber__c.field-meta.xml
<CustomField>
    <fullName>Application_Case_Autonumber__c</fullName>
    <description>Formula field for displaying Case ID in email templates.</description>
    <formula>ApplicationCase.CaseNumber</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Application Case Autonumber</label>
    <type>Text</type>
</CustomField>