force-app/main/default/objects/IndividualApplication/fields/Application_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Application_Expiry_Date__c</fullName>
    <label>Expiry Date</label>
    <summarizedField>Individual_Application_Shadow__c.Expiry_Date__c</summarizedField>
    <summaryForeignKey>Individual_Application_Shadow__c.Individual_Application__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>