force-app/main/default/objects/IndividualApplication/fields/Application_JSON__c.field-meta.xml
<CustomField>
    <fullName>Application_JSON__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Application JSON</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>