force-app/main/default/objects/IndividualApplication/fields/ApplicationJSON__c.field-meta.xml
<CustomField>
    <fullName>ApplicationJSON__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Application JSON</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>