force-app/main/default/objects/IndividualApplication/fields/Bank_Received_Confirmation__c.field-meta.xml
<CustomField>
    <fullName>Bank_Received_Confirmation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bank Received Confirmation</label>
    <type>Checkbox</type>
</CustomField>