force-app/main/default/objects/IndividualApplication/fields/BypassValidation__c.field-meta.xml
<CustomField>
    <fullName>BypassValidation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BypassValidation</label>
    <type>Checkbox</type>
</CustomField>