force-app/main/default/objects/IndividualApplication/fields/Cancellation_Reason__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Reason__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Cancellation/Rejection Comments</inlineHelpText>
    <label>Cancellation/Rejection Comments</label>
    <type>TextArea</type>
</CustomField>