force-app/main/default/objects/IndividualApplication/fields/Cancellation_Reason_picklist__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Reason_picklist__c</fullName>
    <label>Cancellation Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Duplicate application</fullName>
            </value>
            <value>
                <fullName>Customer request</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>