force-app/main/default/objects/IndividualApplication/fields/Case_Status__c.field-meta.xml
<CustomField>
    <fullName>Case_Status__c</fullName>
    <defaultValue>&quot;Provisional Approval&quot;</defaultValue>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Status of the associated Case</inlineHelpText>
    <label>Case Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>