force-app/main/default/objects/IndividualApplication/fields/Certificate_Of_Aboriginality__c.field-meta.xml
<CustomField>
    <fullName>Certificate_Of_Aboriginality__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Certificate Of Aboriginality</label>
    <type>Checkbox</type>
</CustomField>