force-app/main/default/objects/IndividualApplication/fields/Combined_Gross_Taxable_Income__c.field-meta.xml
<CustomField>
    <fullName>Combined_Gross_Taxable_Income__c</fullName>
    <description>For multi-applicant applications</description>
    <label>Combined Gross Taxable Income</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Less than $40,000</fullName>
            </value>
            <value>
                <fullName>$40,000-$80,000</fullName>
            </value>
            <value>
                <fullName>$80,001-$120,000</fullName>
            </value>
            <value>
                <fullName>$160,001-$200,000</fullName>
            </value>
            <value>
                <fullName>More than $200,000</fullName>
            </value>
            <value>
                <fullName>$120,001-$160,000</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>