force-app/main/default/objects/IndividualApplication/fields/Declaration_Of_Accuracy__c.field-meta.xml
<CustomField>
    <fullName>Declaration_Of_Accuracy__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Declaration Of Accuracy</label>
    <type>Checkbox</type>
</CustomField>