force-app/main/default/objects/IndividualApplication/fields/Declaration_Of_Loan_Income_Ratio__c.field-meta.xml
<CustomField>
    <fullName>Declaration_Of_Loan_Income_Ratio__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Declaration Of Loan Income Ratio</label>
    <type>Checkbox</type>
</CustomField>