force-app/main/default/objects/IndividualApplication/fields/Deposit_Saved__c.field-meta.xml
<CustomField>
    <fullName>Deposit_Saved__c</fullName>
    <label>Deposit Contribution</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>