force-app/main/default/objects/IndividualApplication/fields/Expiry_Date1__c.field-meta.xml
<CustomField>
    <fullName>Expiry_Date1__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Expiry Date</label>
    <type>Date</type>
</CustomField>