force-app/main/default/objects/IndividualApplication/fields/Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Expiry_Date__c</fullName>
    <description>Do not use-TBD</description>
    <formula>Individual_Application_Shadow__r.Expiry_Date__c</formula>
    <label>Expiry Date[Do not use-TBD]</label>
    <type>Date</type>
</CustomField>