force-app/main/default/objects/IndividualApplication/fields/Final_Application_In_Progress_c__c.field-meta.xml
<CustomField>
    <fullName>Final_Application_In_Progress_c__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Final Application in Progress</label>
    <type>Checkbox</type>
</CustomField>