force-app/main/default/objects/IndividualApplication/fields/First_Extension_Requested__c.field-meta.xml
<CustomField>
    <fullName>First_Extension_Requested__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The checkbox is an indicator for 1st extension of Provisional Application</description>
    <label>First Extension Requested</label>
    <type>Checkbox</type>
</CustomField>