force-app/main/default/objects/IndividualApplication/fields/Gross_Taxable_Income__c.field-meta.xml
<CustomField>
    <fullName>Gross_Taxable_Income__c</fullName>
    <description>For single applicants</description>
    <label>Gross Taxable Income</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Less than $40,000</fullName>
            </value>
            <value>
                <fullName>$40,000-$80,000</fullName>
            </value>
            <value>
                <fullName>$80,001-$125,000</fullName>
            </value>
            <value>
                <fullName>More than $125,000</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>