force-app/main/default/objects/IndividualApplication/fields/Hard_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Hard_Expiry_Date__c</fullName>
    <description>This date holds the final date beyond which no application can or should be extended.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Hard Expiry Date</label>
    <type>Date</type>
</CustomField>