force-app/main/default/objects/IndividualApplication/fields/Has_Existing_Dwelling__c.field-meta.xml
<CustomField>
    <fullName>Has_Existing_Dwelling__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Existing or New Home</label>
    <type>Checkbox</type>
</CustomField>