force-app/main/default/objects/IndividualApplication/fields/Have_Property__c.field-meta.xml
<CustomField>
    <fullName>Have_Property__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If applicants currently own a property in Victoria</description>
    <inlineHelpText>If applicants currently own a property in Victoria</inlineHelpText>
    <label>Own/have interest in property</label>
    <type>Checkbox</type>
</CustomField>