force-app/main/default/objects/IndividualApplication/fields/Individual_Application_Shadow__c.field-meta.xml
<CustomField>
    <fullName>Individual_Application_Shadow__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Individual_Application_Shadow</label>
    <referenceTo>Individual_Application_Shadow__c</referenceTo>
    <relationshipLabel>Provisional Applications</relationshipLabel>
    <relationshipName>Provisional_Applications</relationshipName>
    <type>Lookup</type>
</CustomField>