force-app/main/default/objects/IndividualApplication/fields/Is_Existing_Applicant__c.field-meta.xml
<CustomField>
    <fullName>Is_Existing_Applicant__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Do any applicants have a current application or have been approved to be part of the First Loan Home Deposit Scheme?</inlineHelpText>
    <label>Is Applicant in FHLDS?</label>
    <type>Checkbox</type>
</CustomField>