force-app/main/default/objects/IndividualApplication/fields/LDR__c.field-meta.xml
<CustomField>
    <fullName>LDR__c</fullName>
    <label>Deposit %</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>