force-app/main/default/objects/IndividualApplication/fields/Loan_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Loan_Account_Number__c</fullName>
    <description>Bank Loan Account Number</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Bank Loan Account Number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>