force-app/main/default/objects/IndividualApplication/fields/Maximum_Pre_Approval_Loan_Amount__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Pre_Approval_Loan_Amount__c</fullName>
    <label>Maximum Pre-Approval Loan Amount</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>