force-app/main/default/objects/IndividualApplication/fields/Maximum_Purchase_Price__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Purchase_Price__c</fullName>
    <label>Maximum Purchase Price</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>