force-app/main/default/objects/IndividualApplication/fields/Meets_Aboriginal_Regional_Vic_Criteria__c.field-meta.xml
<CustomField>
    <fullName>Meets_Aboriginal_Regional_Vic_Criteria__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Meets Aboriginal Regional Vic Criteria</label>
    <type>Checkbox</type>
</CustomField>