force-app/main/default/objects/IndividualApplication/fields/Notify_AHV__c.field-meta.xml
<CustomField>
    <fullName>Notify_AHV__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If AHV needs to be notified of any updates to the application</description>
    <label>Notify AHV</label>
    <type>Checkbox</type>
</CustomField>