force-app/main/default/objects/IndividualApplication/fields/Number_Of_Applicants__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Applicants__c</fullName>
    <description>Number of applicants in an application</description>
    <label>Number Of Applicants</label>
    <summaryForeignKey>Applicant__c.IndividualApplication__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>