force-app/main/default/objects/IndividualApplication/fields/Other_Source__c.field-meta.xml
<CustomField>
    <fullName>Other_Source__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Please Specify</label>
    <length>100</length>
    <type>Text</type>
</CustomField>