force-app/main/default/objects/IndividualApplication/fields/Parent_Case_Id__c.field-meta.xml
<CustomField>
    <fullName>Parent_Case_Id__c</fullName>
    <description>Formula field to pull the Parent Cases Id onto the Application for a validation rule to ensure Applications cannot be reparented</description>
    <formula>ApplicationCase.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent Case Id</label>
    <type>Text</type>
</CustomField>