force-app/main/default/objects/IndividualApplication/fields/Personal_Details_Changed__c.field-meta.xml
<CustomField>
    <fullName>Personal_Details_Changed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to capture whether related applicants&apos; personal contact details have changed</description>
    <label>Personal Details Changed</label>
    <type>Checkbox</type>
</CustomField>