force-app/main/default/objects/IndividualApplication/fields/PPR_Purpose__c.field-meta.xml
<CustomField>
    <fullName>PPR_Purpose__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If property is planned to be used as PPR</description>
    <label>PPR Purpose</label>
    <type>Checkbox</type>
</CustomField>