force-app/main/default/objects/IndividualApplication/fields/Processing_Officer__c.field-meta.xml
<CustomField>
    <fullName>Processing_Officer__c</fullName>
    <defaultValue>&quot;VHF New Case Queue&quot;</defaultValue>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Owner of the associated Case</inlineHelpText>
    <label>Processing Officer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>