force-app/main/default/objects/IndividualApplication/fields/Related_Person_Seller__c.field-meta.xml
<CustomField>
    <fullName>Related_Person_Seller__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If the property is being bought from a related person</description>
    <inlineHelpText>If the property is being bought from a related person</inlineHelpText>
    <label>Related Person Seller</label>
    <type>Checkbox</type>
</CustomField>