force-app/main/default/objects/IndividualApplication/fields/Saved_Minimum_Deposit__c.field-meta.xml
<CustomField>
    <fullName>Saved_Minimum_Deposit__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If the applicant(s) can contribute the required percentage towards the deposit</description>
    <label>Saved Minimum Deposit</label>
    <type>Checkbox</type>
</CustomField>