force-app/main/default/objects/IndividualApplication/fields/Scheme_Information_Source__c.field-meta.xml
<CustomField>
    <fullName>Scheme_Information_Source__c</fullName>
    <label>Scheme Information Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TVadvertisement</fullName>
                <label>TV advertisement</label>
            </value>
            <value>
                <fullName>Audioadvertisement</fullName>
                <label>Audio advertisement</label>
            </value>
            <value>
                <fullName>Googlesearch</fullName>
                <label>Google search</label>
            </value>
            <value>
                <fullName>Newspaperadvertisement</fullName>
                <label>Newspaper advertisement</label>
            </value>
            <value>
                <fullName>Billboard</fullName>
            </value>
            <value>
                <fullName>Newsreport</fullName>
                <label>News report</label>
            </value>
            <value>
                <fullName>Onlineadvertisement</fullName>
                <label>Online advertisement</label>
            </value>
            <value>
                <fullName>Onlinevideo</fullName>
                <label>Online video</label>
            </value>
            <value>
                <fullName>Bankadvertisement</fullName>
                <label>Bank advertisement</label>
            </value>
            <value>
                <fullName>SocialMedia</fullName>
                <label>Social Media</label>
            </value>
            <value>
                <fullName>Wordofmouth</fullName>
                <label>Word of mouth</label>
            </value>
            <value>
                <fullName>StateRevenueOfficewebsite</fullName>
                <label>State Revenue Office website</label>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>