force-app/main/default/objects/IndividualApplication/fields/Second_Extension_Requested__c.field-meta.xml
<CustomField>
    <fullName>Second_Extension_Requested__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The second Expiry date extension indicator.</description>
    <label>Second Extension Requested</label>
    <type>Checkbox</type>
</CustomField>