force-app/main/default/objects/IndividualApplication/fields/Settlement_Date__c.field-meta.xml
<CustomField>
    <fullName>Settlement_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Settlement Date</label>
    <type>Date</type>
</CustomField>