force-app/main/default/objects/IndividualApplication/fields/Signed_Contract_of_Sale__c.field-meta.xml
<CustomField>
    <fullName>Signed_Contract_of_Sale__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Signed Contract of Sale</label>
    <type>Checkbox</type>
</CustomField>