force-app/main/default/objects/IndividualApplication/fields/Submission_Date__c.field-meta.xml
<CustomField>
    <fullName>Submission_Date__c</fullName>
    <description>Date only representation of the Application Submission Date</description>
    <formula>DATEVALUE( AppliedDate )</formula>
    <label>Application Submission Date</label>
    <type>Date</type>
</CustomField>