force-app/main/default/objects/IndividualApplication/fields/VHF_Application_ID__c.field-meta.xml
<CustomField>
    <fullName>VHF_Application_ID__c</fullName>
    <description>If Loan Account Number is supplied, the value is AppId+Loan Account Number, otherwise it is just Application ID.  Field should be marked as Unique as part of configuration</description>
    <formula>IF( ISBLANK(Loan_Account_Number__c),  Name, Name &amp; &quot;-&quot; &amp;  Loan_Account_Number__c )</formula>
    <label>VHF Application ID</label>
    <type>Text</type>
</CustomField>