force-app/main/default/objects/IndividualApplication/fields/VHF_Contribution__c.field-meta.xml
<CustomField>
    <fullName>VHF_Contribution__c</fullName>
    <label>Shared Equity Contribution</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>