force-app/main/default/objects/IndividualApplication/fields/VHF_Contribution_Percent__c.field-meta.xml
<CustomField>
    <fullName>VHF_Contribution_Percent__c</fullName>
    <label>Shared Equity %</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>