force-app/main/default/objects/IndividualApplication/recordTypes/VHF_Applications.recordType-meta.xml
<RecordType>
    <fullName>VHF_Applications</fullName>
    <active>true</active>
    <label>VHF Applications</label>
</RecordType>