force-app/main/default/objects/IndividualApplication/validationRules/Application_Cancellation_Status_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>Application_Cancellation_Status_Check</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(Status,&quot;Cancelled&quot;) &amp;&amp;  Final_Application_In_Progress_c__c</errorConditionFormula>
    <errorMessage>This application can&apos;t be cancelled as a Final application is in progress!</errorMessage>
</ValidationRule>