force-app/main/default/objects/IndividualApplication/validationRules/Cancellation_Reason_Drop_Down_Selection.validationRule-meta.xml
<ValidationRule>
    <fullName>Cancellation_Reason_Drop_Down_Selection</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL(Status,&quot;Cancelled&quot;),

(ISBLANK( TEXT (Cancellation_Reason_picklist__c))
))</errorConditionFormula>
    <errorDisplayField>Cancellation_Reason_picklist__c</errorDisplayField>
    <errorMessage>Please select a cancellation reason from Cancellation Reason field</errorMessage>
</ValidationRule>