force-app/main/default/objects/IndividualApplication/validationRules/Prevent_manual_expiry.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_manual_expiry</fullName>
    <active>true</active>
    <description>VHF-1802</description>
    <errorConditionFormula>AND( ISCHANGED( Status ) ,
ISPICKVAL(Status, &apos;Expired&apos;),
NOT(BypassValidation__c) ,
NOT($Profile.Name = &quot;System Administrator&quot;)
)</errorConditionFormula>
    <errorMessage>Provisional Application is automatically Expired based on Expiry date and Final Application status!</errorMessage>
</ValidationRule>