force-app/main/default/objects/IndividualApplication/validationRules/Prevent_reason_update_after_rejected.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_reason_update_after_rejected</fullName>
    <active>true</active>
    <description>Prevent rejection reason update once application is rejected, only system admins can update it</description>
    <errorConditionFormula>NOT(IsNew())
&amp;&amp;
NOT($Profile.Name = &quot;System Administrator&quot;)
&amp;&amp;
NOT(ISCHANGED(Status))
&amp;&amp; 
ISPICKVAL( Status ,&quot;Rejected&quot;)
&amp;&amp;
ISCHANGED( Rejection_Reason__c )</errorConditionFormula>
    <errorDisplayField>Rejection_Reason__c</errorDisplayField>
    <errorMessage>Rejection reason can&apos;t be updated after the application has been rejected!</errorMessage>
</ValidationRule>