force-app/main/default/objects/IndividualApplication/validationRules/RestrictUserToUpdateApplicationStatus.validationRule-meta.xml
<ValidationRule>
    <fullName>RestrictUserToUpdateApplicationStatus</fullName>
    <active>true</active>
    <description>Restrict Users ToUpdate ApplicationStatus when status is Settled</description>
    <errorConditionFormula>NOT(ISNEW()) &amp;&amp; ISCHANGED(Status) &amp;&amp; NOT(BypassValidation__c) &amp;&amp;(ISPICKVAL(PRIORVALUE(Status), &quot;Settled&quot;) || (ISPICKVAL( Status ,&quot;Settled&quot;)))</errorConditionFormula>
    <errorMessage>Application Status Can not be updated</errorMessage>
</ValidationRule>