force-app/main/default/objects/IndividualApplication/validationRules/Select_Rejection_Reason_when_Rejected.validationRule-meta.xml
<ValidationRule>
    <fullName>Select_Rejection_Reason_when_Rejected</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL(Status, &quot;Rejected&quot;), (ISBLANK( TEXT(Rejection_Reason__c) )))</errorConditionFormula>
    <errorDisplayField>Rejection_Reason__c</errorDisplayField>
    <errorMessage>Please select a valid Rejection Reason!</errorMessage>
</ValidationRule>