force-app/main/default/objects/IndividualApplication/validationRules/Users_cannot_update_case_lookup.validationRule-meta.xml
<ValidationRule>
    <fullName>Users_cannot_update_case_lookup</fullName>
    <active>true</active>
    <errorConditionFormula>IsChanged(Parent_Case_Id__c)
&amp;&amp;
Not($Profile.Name = &quot;System Administrator&quot;)
&amp;&amp;
Not(IsNew())</errorConditionFormula>
    <errorDisplayField>ApplicationCaseId</errorDisplayField>
    <errorMessage>You cannot change the Case for this Application</errorMessage>
</ValidationRule>