force-app/main/default/objects/IndividualApplication/listViews/All_IndividualApplication.listView-meta.xml
<ListView>
    <fullName>All_IndividualApplication</fullName>
    <columns>Name</columns>
    <columns>Account</columns>
    <columns>Status</columns>
    <columns>Submission_Date__c</columns>
    <columns>Case_Status__c</columns>
    <columns>Panel_Finance_Officer__c</columns>
    <columns>Lender_Account__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Provisional Applications</label>
    <sharedTo>
        <group>Admin_Users</group>
    </sharedTo>
</ListView>