force-app/main/default/objects/IndividualApplication/listViews/All_VHF_Applications.listView-meta.xml
<ListView>
    <fullName>All_VHF_Applications</fullName>
    <columns>Name</columns>
    <columns>ApplicantNames__c</columns>
    <columns>Status</columns>
    <columns>ApplicationCase</columns>
    <columns>Case_Status__c</columns>
    <columns>Submission_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Provisional Applications</label>
</ListView>